--- a/index.html
+++ b/index.html
@@ -1149,7 +1149,7 @@
                 data-bs-toggle="collapse"
                 data-bs-target="#faq3"
                 class="collapsed"
-                >¿Cuál es la diferencia entre cintas multicolor (cintas cifradas) y las grises (cintas originales)?<i class="bx bx-chevron-down icon-show"></i
+                ><p>¿Cuál es la diferencia entre cintas multicolor (cintas cifradas) y las grises (cintas originales)?</p><i class="bx bx-chevron-down icon-show"></i
                 ><i class="bx bx-x icon-close"></i
               ></a>
               <div id="faq3" class="collapse" data-bs-parent=".faq-list">
@@ -1164,7 +1164,7 @@
                 data-bs-toggle="collapse"
                 data-bs-target="#faq4"
                 class="collapsed"
-                >A parte de personajes, puedo obtener algo mas en los banners?
+                ><p>A parte de personajes, puedo obtener algo mas en los banners?</p>
                 <i class="bx bx-chevron-down icon-show"></i
                 ><i class="bx bx-x icon-close"></i
               ></a>
