--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@
     <!-- Template Main CSS File -->
     <link href="assets/css/style.css" rel="stylesheet" />
 
+    <script
+      type="text/javascript"
+      src="http://maps.google.com/maps/api/js?key=AIzaSyCSThGfqxk3h461GvFUpo3A8RssbTJ3suw&sensor=false&region=ES"
+    ></script>
+    
+    <script type="text/javascript" src="assets/js/mapa.js"></script>
+
     <!-- =======================================================
   * Template Name: Knight - v4.3.0
   * Template URL: https://bootstrapmade.com/knight-free-bootstrap-theme/
@@ -950,10 +957,10 @@
                     alt=""
                   />
                   <div class="social">
-                    <a href=""><i class="bi bi-twitter"></i></a>
-                    <a href=""><i class="bi bi-facebook"></i></a>
-                    <a href=""><i class="bi bi-instagram"></i></a>
-                    <a href=""><i class="bi bi-linkedin"></i></a>
+                    <a href="https://x.com/ZZZ_EN?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"><i class="bi bi-twitter"></i></a>
+                    <a href="https://www.facebook.com/ZZZ.Official.EN/?locale=es_LA"><i class="bi bi-facebook"></i></a>
+                    <a href="https://www.instagram.com/zzz.official.en/"><i class="bi bi-instagram"></i></a>
+                    <a href="https://www.linkedin.com/posts/hoyoverse_zenless-zone-zero-state-of-play-announcement-activity-7158700680617033728-eq6Y"><i class="bi bi-linkedin"></i></a>
                   </div>
                 </div>
                 <div class="member-info">
@@ -981,10 +988,10 @@
                     alt=""
                   />
                   <div class="social">
-                    <a href=""><i class="bi bi-twitter"></i></a>
-                    <a href=""><i class="bi bi-facebook"></i></a>
-                    <a href=""><i class="bi bi-instagram"></i></a>
-                    <a href=""><i class="bi bi-linkedin"></i></a>
+                    <a href="https://x.com/ZZZ_EN?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"><i class="bi bi-twitter"></i></a>
+                    <a href="https://www.facebook.com/ZZZ.Official.EN/?locale=es_LA"><i class="bi bi-facebook"></i></a>
+                    <a href="https://www.instagram.com/zzz.official.en/"><i class="bi bi-instagram"></i></a>
+                    <a href="https://www.linkedin.com/posts/hoyoverse_zenless-zone-zero-state-of-play-announcement-activity-7158700680617033728-eq6Y"><i class="bi bi-linkedin"></i></a>
                   </div>
                 </div>
                 <div class="member-info">
@@ -1011,10 +1018,10 @@
                     alt=""
                   />
                   <div class="social">
-                    <a href=""><i class="bi bi-twitter"></i></a>
-                    <a href=""><i class="bi bi-facebook"></i></a>
-                    <a href=""><i class="bi bi-instagram"></i></a>
-                    <a href=""><i class="bi bi-linkedin"></i></a>
+                    <a href="https://x.com/ZZZ_EN?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"><i class="bi bi-twitter"></i></a>
+                    <a href="https://www.facebook.com/ZZZ.Official.EN/?locale=es_LA"><i class="bi bi-facebook"></i></a>
+                    <a href="https://www.instagram.com/zzz.official.en/"><i class="bi bi-instagram"></i></a>
+                    <a href="https://www.linkedin.com/posts/hoyoverse_zenless-zone-zero-state-of-play-announcement-activity-7158700680617033728-eq6Y"><i class="bi bi-linkedin"></i></a>
                   </div>
                 </div>
                 <div class="member-info">
@@ -1091,7 +1098,7 @@
                   <li class="na">limitador de obtencion de monedas</li>
                 </ul>
                 <div class="btn-wrap">
-                  <a href="#" class="btn-buy">COMPRA AHORA</a>
+                  <a href="https://lootbar.gg/es/top-up/zenless-zone-zero?utm_source=Affiliate&utm_medium=Affiliate&utm_campaign=ZenlessZoneZero" class="btn-buy">COMPRA AHORA</a>
                 </div>
               </div>
             </div>
@@ -1108,7 +1115,7 @@
                   <li class="na">limitador de obtencion de monedas</li>
                 </ul>
                 <div class="btn-wrap">
-                  <a href="#" class="btn-buy">COMPRA AHORA</a>
+                  <a href="https://lootbar.gg/es/top-up/zenless-zone-zero?utm_source=Affiliate&utm_medium=Affiliate&utm_campaign=ZenlessZoneZero" class="btn-buy">COMPRA AHORA</a>
                 </div>
               </div>
             </div>
@@ -1126,7 +1133,7 @@
                   <li class="na">limitador de obtencion de monedas</li>
                 </ul>
                 <div class="btn-wrap">
-                  <a href="#" class="btn-buy">COMPRA AHORA</a>
+                  <a href="https://lootbar.gg/es/top-up/zenless-zone-zero?utm_source=Affiliate&utm_medium=Affiliate&utm_campaign=ZenlessZoneZero" class="btn-buy">COMPRA AHORA</a>
                 </div>
               </div>
             </div>
@@ -1134,6 +1141,89 @@
         </div>
       </section>
       <!-- End Pricing Section -->
+
+      <!-- ======= Form Section ======= -->
+
+      <section id="form" class="form">
+
+        <form action="forms/tratamientoDatos.php" method="post">
+
+          <h2>Formulario de feedback</h2>
+
+          <br>
+
+          <div>
+          <p>¿Ha jugado usted a Zenless Zone Zero?</p>
+
+          <label for="si">Sí</label>
+          <input type="radio" name="jugador" id="si" value="si">
+            <br>
+          <label for="no">No</label>
+          <input type="radio" name="jugador" id="no" value="no">
+          </div>
+
+          <br>
+
+          <div>
+          <p>¿Qué es lo que más le llama/le ha llamado la atención del juego? (Puede seleccionar más de una respuesta)</p>
+
+          <label for="opciones">Opciones</label>
+      <br>      
+          <select name="opciones{}" id="opciones" multiple>
+
+            <option value="personajes">Los personajes</option>
+            <option value="historia">Su historia</option>
+            <option value="ambientacion">La ambientación</option>
+            <option value="apariencia">El diseño general del juego</option>
+            <option value="gameplay">La jugabilidad</option>
+            <option value="eventos">Los eventos del juego</option>
+
+          </select>
+
+          </div>
+          
+          <br>
+
+          <div>
+
+            <label for="satisfaccion">¿Qué tan satisfecho está con el juego o con el tráiler?</label>
+            <br>
+            <input type="range" name="satisfaccion" id="satisfaccion" min="1" max="10">
+
+
+          </div>
+
+          <br>
+
+          <div>
+
+            <label for="comentario">¿Tiene alguna opinión que desea comunicarnos?</label>
+            <br>
+            <textarea name="comentario" id="comentario" rows="10" cols="70" placeholder="Escriba su opinión aquí"></textarea>
+
+          </div>
+
+          <br>
+
+          <div>
+            <p>
+                <label for="Casilla">He leído y Acepto los términos y Condiciones de Servicio de COGNOSPHERE y Hoyoverse</label>
+                <input type="checkbox" name="Términos" id="Casilla" required checked value="Aceptados">
+              </p>
+          </div>
+
+          <br>
+
+          <div class="btn-group mt-4">
+            <button type="submit" class="btn btn-success">Enviar</button>
+              <button type="reset" class="btn btn-danger">Borrar</button>
+            </div>
+
+        </form>
+
+      </section>
+
+          <!-- End Form Section -->
 
             <!-- ======= Frequently Asked Questions Section ======= -->
       <section id="faq" class="faq">
@@ -1424,11 +1514,11 @@
           </div>
 
           <div class="social-links">
-            <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-            <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-            <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-            <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-            <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+            <a href="https://x.com/ZZZ_EN?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" class="twitter"><i class="bx bxl-twitter"></i></a>
+            <a href="https://www.facebook.com/ZZZ.Official.EN/?locale=es_LA" class="facebook"><i class="bx bxl-facebook"></i></a>
+            <a href="https://www.instagram.com/zzz.official.en/ class="instagram"><i class="bx bxl-instagram"></i></a>
+            <a href="https://play.google.com/store/apps/details?id=com.HoYoverse.Nap&hl=es" class="google-plus"><i class="bx bxl-skype"></i></a>
+            <a href="https://www.linkedin.com/posts/hoyoverse_zenless-zone-zero-state-of-play-announcement-activity-7158700680617033728-eq6Y" class="linkedin"><i class="bx bxl-linkedin"></i></a>
           </div>
         </div>
       </div>
