--- a/index.html
+++ b/index.html
@@ -1351,7 +1351,7 @@
             </li>
           </ul>
           <br>
-        <h2 class="centradonegro">Guias de ayuda</h2>
+        <h2 class="centradonegro">GUIAS DE AYUDA</h2>
         <h4 class="centrado">Creadores de contenido del juego recomendados por la plataforma</h4>
 
           <br>
